--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
     "prop-types": "^15.6.0",
     "save-svg-as-png": "^1.4.5"
   },
+  "peerDependencies": {
+    "react": "^15.0.0 || ^18.2.0",
+    "react-dom": "^15.0.0 || ^18.2.0"
+  },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.26.0",
